tests/outref/TDRC04.ref

-- Error highlighting before \d
select * from asdf;

-- \d usage
\d;

-- Error highlighting after \d
select * from asdf;
[ERROR]: ERR_UNKNOWN_TABLE: Unknown table: asdf
LINE 2:1: select * from asdf;
                        ^^^^
Schema|Name|Type|Owner
public|information_schema.tables|table|octo
public|names|table|octo
public|nameswithages|table|octo
public|octoonerowtable|table|octo
public|pg_aggregate|table|octo
public|pg_am|table|octo
public|pg_attrdef|table|octo
public|pg_attribute|table|octo
public|pg_catalog.pg_aggregate|table|octo
public|pg_catalog.pg_am|table|octo
public|pg_catalog.pg_attrdef|table|octo
public|pg_catalog.pg_attribute|table|octo
public|pg_catalog.pg_class|table|octo
public|pg_catalog.pg_constraint|table|octo
public|pg_catalog.pg_conversion|table|octo
public|pg_catalog.pg_database|table|octo
public|pg_catalog.pg_depend|table|octo
public|pg_catalog.pg_description|table|octo
public|pg_catalog.pg_enum|table|octo
public|pg_catalog.pg_index|table|octo
public|pg_catalog.pg_inherits|table|octo
public|pg_catalog.pg_language|table|octo
public|pg_catalog.pg_namespace|table|octo
public|pg_catalog.pg_policies|table|octo
public|pg_catalog.pg_proc|table|octo
public|pg_catalog.pg_range|table|octo
public|pg_catalog.pg_rewrite|table|octo
public|pg_catalog.pg_roles|table|octo
public|pg_catalog.pg_settings|table|octo
public|pg_catalog.pg_shdescription|table|octo
public|pg_catalog.pg_tablespace|table|octo
public|pg_catalog.pg_trigger|table|octo
public|pg_catalog.pg_type|table|octo
public|pg_catalog.pg_user|table|octo
public|pg_class|table|octo
public|pg_constraint|table|octo
public|pg_conversion|table|octo
public|pg_database|table|octo
public|pg_depend|table|octo
public|pg_description|table|octo
public|pg_enum|table|octo
public|pg_index|table|octo
public|pg_inherits|table|octo
public|pg_language|table|octo
public|pg_namespace|table|octo
public|pg_policies|table|octo
public|pg_proc|table|octo
public|pg_range|table|octo
public|pg_rewrite|table|octo
public|pg_roles|table|octo
public|pg_settings|table|octo
public|pg_shdescription|table|octo
public|pg_tablespace|table|octo
public|pg_trigger|table|octo
public|pg_type|table|octo
public|pg_user|table|octo
(56 rows)
[ERROR]: ERR_UNKNOWN_TABLE: Unknown table: asdf
LINE 6:1: select * from asdf;
                        ^^^^
